@@ -1,2 +1,3 @@
+19/12/2019 - Modification of Time History Saves to include initial state
 
 12/12/2019 - First commit of sources, documentation and samples files
